FunParse: открытие браузера по умолчанию
При нажатии на кнопку доната открывается браузер по умолчанию и перекидывается на старницу доната.